Add querying support for the `active` field
You can use `?active=true` to only get active pages or `?active=false` to only get inactive pages. If left blank, all pages are included.
